--- a/.env
+++ b/.env
@@ -29,12 +29,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=mail.randour-x.com
 MAIL_PORT=587
-MAIL_USERNAME=randourx@gmail.com
-MAIL_PASSWORD=hpqxwvqqtyrucprk
+MAIL_USERNAME=info@randour-x.com
+MAIL_PASSWORD=Randourx@123
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=randourx@gmail.com
+MAIL_FROM_ADDRESS=info@randour-x.com
 MAIL_FROM_NAME="${APP_NAME}"
 
 AWS_ACCESS_KEY_ID=
